fix: recomendaciones de Intellij